<resources>
    <string name="app_name">DigitalLecture</string>
    <string name="digital_lecture">Digital Lecture</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="enter_note_here">Enter note here</string>
    <string name="options">Options</string>
    <string name="select_color">Note Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_the_note">Are you sure you want to delete the note?</string>
    <string name="login">Login</string>
    <string name="email">Your Email</string>
    <string name="password">Your Password</string>
    <string name="foregot">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="confirmpass">Your Confirm Password</string>
    <string name="registern">Register Your Account</string>
</resources>
