<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textDigitalLecture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/digital_lecture"
        android:fontFamily="@font/robotocondensedbold"
        android:includeFontPadding="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:background="@drawable/backgroud_search"
        app:layout_constraintTop_toBottomOf="@id/textDigitalLecture"
        >

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_searchicon"
            android:tint="@color/colorSearchIcon"
            />
        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/robotocondensedlight"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="true"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextTip"
            android:textSize="@dimen/_13ssp"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:padding="0dp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActionMenu"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"

        />

    <LinearLayout
        android:id="@+id/layoutQuickActionMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionMenu"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:id="@+id/imageNewNote"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_circle"
            android:tint="@color/colorIcons"
            />
        <ImageView
            android:id="@+id/imageNewImage"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            android:layout_marginStart="@dimen/_10sdp"
            android:tint="@color/colorIcons"
            />
        <ImageView
            android:id="@+id/imageNewLink"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_link"
            android:tint="@color/colorIcons"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageAddNewNoteMain"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:background="@drawable/backgroud_add_btn"
        android:layout_marginEnd="@dimen/_34sdp"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/ic_add"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActionMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutQuickActionMenu"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
